boulder/boulder/tests/compile_fail/type/expected_value.bo
# Expected value, found type `A`
# (9:

struct A {
    field: u32,
}

fn test() -> A {
    A
}